# vibes

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  codecov.yml  flake.nix  justfile  package-lock.json  package.json  turbo.json
plugins/vibes-groove/: Cargo.toml  README.md
plugins/vibes-groove/resources/: default-secure-policy.toml
plugins/vibes-groove/src/: config.rs  error.rs  export.rs  lib.rs  plugin.rs  storage.rs
plugins/vibes-groove/src/assessment/: api_types.rs  checkpoint.rs  circuit_breaker.rs  config.rs  consumer.rs  harness_llm.rs  intervention.rs  lightweight.rs  log.rs  mod.rs  processor.rs  sampling.rs  session_buffer.rs  session_end.rs  stats_accumulator.rs  sync_processor.rs  types.rs
plugins/vibes-groove/src/attribution/: ablation.rs  activation.rs  aggregation.rs  consumer.rs  mod.rs  store.rs  temporal.rs  types.rs
plugins/vibes-groove/src/capture/: collector.rs  extractor.rs  mod.rs
plugins/vibes-groove/src/dashboard/: handler.rs  mod.rs  types.rs
plugins/vibes-groove/src/extraction/: consumer.rs  dedup.rs  embedder.rs  mod.rs  types.rs
plugins/vibes-groove/src/inject/: formatter.rs
plugins/vibes-groove/src/openworld/: clustering.rs  consumer.rs  gaps.rs  (+7 more)
plugins/vibes-groove/tests/: assessment_integration.rs  e2e_assessment.rs  extraction_integration.rs  integration.rs  openworld_integration.rs
vibes-cli/: Cargo.toml  build.rs
vibes-cli/src/: iggy_client.rs  main.rs
vibes-cli/src/client/: connection.rs  mod.rs
vibes-cli/src/commands/: agent.rs  auth.rs  claude.rs  config.rs  eval.rs  event.rs  groove.rs  mod.rs  models.rs  observe.rs  plugin.rs  plugin_dispatch.rs  serve.rs  sessions.rs  tui.rs  tunnel.rs
vibes-cli/src/config/: loader.rs  mod.rs  types.rs
vibes-cli/src/daemon/: autostart.rs  mod.rs  state.rs
vibes-cli/src/input/: history.rs  mod.rs  readline.rs
vibes-cli/src/ollama/: manager.rs  mod.rs
vibes-cli/src/server/: mod.rs
vibes-cli/src/terminal/: mod.rs  raw.rs
vibes-cli/tests/: e2e.rs
vibes-core/: Cargo.toml
vibes-core/src/: error.rs  lib.rs
vibes-core/src/agent/: local_agent.rs  mod.rs  registry.rs  task.rs  traits.rs  types.rs
vibes-core/src/auth/: config.rs  context.rs  error.rs  mod.rs  validator.rs
vibes-core/src/backend/: mock.rs  mod.rs  print_mode.rs  slow_mock.rs  traits.rs
vibes-core/src/events/: bus.rs  memory.rs  mod.rs  types.rs
vibes-core/src/history/: builder.rs  error.rs  mod.rs  query.rs  service.rs  store.rs  types.rs
vibes-core/src/hooks/: installer.rs  mod.rs  receiver.rs  scripts.rs  types.rs
vibes-core/src/notifications/: config.rs  mod.rs  service.rs  store.rs  types.rs  vapid.rs
vibes-core/src/parser/: mod.rs  stream_json.rs
vibes-core/src/plugins/: commands.rs  error.rs  host.rs  mod.rs  registry.rs  routes.rs
vibes-core/src/pty/: backend.rs  config.rs  error.rs  manager.rs  mod.rs  scrollback.rs  session.rs
vibes-core/src/session/: lifecycle.rs  manager.rs  mod.rs  ownership.rs  state.rs
vibes-core/src/tunnel/: cloudflared.rs  config.rs  manager.rs  mod.rs  restart.rs  state.rs
vibes-core/tests/: concurrency.rs  integration.rs  print_mode_test.rs
vibes-evals/: Cargo.toml
vibes-evals/src/: commands.rs  consumer.rs  events.rs  lib.rs  manager.rs  metrics.rs  storage.rs  study.rs  types.rs
vibes-evals/src/storage/: error.rs  mod.rs  turso.rs
vibes-groove/: Cargo.toml  README.md
vibes-groove/src/: error.rs  lib.rs  paths.rs  plugin.rs  storage.rs
vibes-groove/src/assessment/: log.rs  mod.rs  types.rs
vibes-groove/src/capture/: mod.rs  parser.rs
vibes-groove/src/inject/: formatter.rs  injector.rs  mod.rs
vibes-groove/src/security/: audit.rs  error.rs  injector.rs  mod.rs  policy.rs  provenance.rs  quarantine.rs  rbac.rs  scanning.rs  store.rs  trust.rs
vibes-groove/src/store/: cozo.rs  mod.rs  schema.rs  traits.rs
vibes-groove/src/types/: mod.rs  params.rs  relations.rs  scope.rs  usage.rs
vibes-groove/tests/: integration.rs
vibes-iggy/: Cargo.toml  build.rs
vibes-iggy/src/: config.rs  error.rs  iggy_log.rs  lib.rs  manager.rs  memory.rs  partitioned_memory.rs  preflight.rs  traits.rs
vibes-iggy/tests/: integration.rs
vibes-introspection/: Cargo.toml
vibes-introspection/src/: capabilities.rs  error.rs  harness.rs  lib.rs  paths.rs  watcher.rs
vibes-introspection/src/claude_code/: detection.rs  harness.rs  mod.rs
vibes-introspection/tests/: integration.rs
vibes-models/: Cargo.toml
vibes-models/src/: error.rs  lib.rs  types.rs
vibes-models/src/auth/: mod.rs
vibes-models/src/providers/: mod.rs  ollama.rs  types.rs
vibes-models/src/registry/: mod.rs
vibes-observe/: Cargo.toml
vibes-observe/src/: context.rs  export.rs  lib.rs  subscriber.rs  tracer.rs  types.rs
vibes-plugin-api/: Cargo.toml
vibes-plugin-api/src/: command.rs  context.rs  error.rs  event.rs  http.rs  lib.rs  types.rs
vibes-server/: Cargo.toml
vibes-server/src/: agent_registry.rs  error.rs  lib.rs  state.rs
vibes-server/src/consumers/: assessment.rs  mod.rs  notification.rs  plugin.rs  websocket.rs
vibes-server/src/http/: api.rs  groove.rs  history.rs  mod.rs  plugins.rs  push.rs  static_files.rs
vibes-server/src/middleware/: auth.rs  mod.rs
vibes-server/src/ws/: assessment.rs  connection.rs  firehose.rs  mod.rs  protocol.rs  traces.rs
vibes-server/tests/: firehose_events.rs  history_catchup.rs  iggy_integration.rs  pty_integration.rs  server_config.rs  ws_assessment.rs  ws_protocol.rs
vibes-server/tests/common/: client.rs  mod.rs
vibes-tui/: Cargo.toml
vibes-tui/src/: app.rs  client.rs  clipboard.rs  keybindings.rs  lib.rs  state.rs  terminal.rs  theme.rs
vibes-tui/src/commands/: input.rs  mod.rs  registry.rs  settings.rs  theme.rs
vibes-tui/src/views/: agent.rs  dashboard.rs  mod.rs  settings.rs  stack.rs  swarm.rs  traits.rs
vibes-tui/src/widgets/: activity_feed.rs  agent_card.rs  command_bar.rs  confirmation.rs  control_bar.rs  diff_modal.rs  merge_dialog.rs  merge_results.rs  mod.rs  output_panel.rs  permission.rs  session_list.rs  stats_bar.rs  swarm_status.rs  theme_preview.rs  theme_selector.rs
(+1918 files in other folders)
