[workspace]
resolver = "2"
members = ["vibes-core", "vibes-cli", "vibes-plugin-api", "vibes-server"]
exclude = ["examples/plugins/hello-plugin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/run-vibes/vibes"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
