[workspace]
resolver = "2"
members = [
    "vibes-cli",
    "vibes-core",
    "vibes-plugin-api",
    "vibes-server",
    "vibes-introspection",
    "vibes-groove",
]
exclude = ["examples/plugins/hello-plugin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/run-vibes/vibes"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "6"
tempfile = "3"
