[package]
name = "vibes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for vibes - Claude Code proxy with remote access"

[[bin]]
name = "vibes"
path = "src/main.rs"

[dependencies]
vibes-core = { path = "../vibes-core" }
vibes-groove = { path = "../plugins/vibes-groove" }
vibes-models = { path = "../vibes-models" }
vibes-paths = { path = "../vibes-paths" }
vibes-plugin-api = { path = "../vibes-plugin-api" }
vibes-server = { path = "../vibes-server" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
dirs = "5"
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
crossterm = "0.28"
base64 = "0.22"
comfy-table = "7"
dialoguer = "0.11"
thiserror = { workspace = true }
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
default = []
# Basic integration tests (help, config, etc.)
integration = []
# Integration tests that require Claude CLI and API key
integration_claude = ["integration"]
# Integration tests that require running Iggy server
integration_iggy = ["integration"]
