[package]
name = "vibes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for vibes - Claude Code proxy with remote access"

[features]
default = []
integration = []

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
toml.workspace = true
chrono.workspace = true
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
libloading = "0.8"
dirs = "6"
which = "7"
web-push-native = { version = "0.4", features = ["vapid"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
base64ct = { version = "1", features = ["std"] }
http = "1"
portable-pty = "0.8"
vibes-plugin-api = { path = "../vibes-plugin-api" }
vibes-iggy = { path = "../vibes-iggy" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
