[package]
name = "vibes-evals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Evaluation and benchmarking framework for vibes"

[dependencies]
vibes-core = { path = "../vibes-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
