[package]
name = "vibes-groove"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Continual learning storage for vibes"

[dependencies]
# Storage
cozo = { version = "0.7", default-features = false, features = ["storage-rocksdb"] }

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

# Bayesian sampling
rand = "0.8"
rand_distr = "0.4"

# Config paths
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
