[package]
name = "vibes-iggy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Iggy-backed event log for vibes"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
humantime-serde = "1"

# Filesystem
dirs = "5"
which = "7"

# System info (for ulimit checks)
rlimit = "0.10"

# Iggy SDK
# NOTE: Server server-0.6.0 uses SDK 0.8.x protocol (confusing versioning).
# SDK 0.6.x on crates.io is outdated and incompatible.
iggy = "0.8"

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# HTTP client for readiness checks
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
