[package]
name = "vibes-introspection"
version = "0.1.0"
edition = "2021"
description = "Harness capability introspection for vibes"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "process", "sync", "time"] }
async-trait = "0.1"

# File watching
notify = "6"

# Cross-platform paths
dirs = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
