[package]
name = "vibes-introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Harness capability introspection for vibes"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "process", "sync", "time"] }
async-trait.workspace = true

# File watching
notify.workspace = true

# Cross-platform paths
dirs.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[features]
default = ["claude-code"]
claude-code = []

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
