[package]
name = "vibes-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model management for vibes - registry, auth, and provider abstractions"

[features]
default = []

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
keyring = "3"
secrecy = { version = "0.10", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
