[package]
name = "vibes-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Observability and tracing infrastructure for vibes"

[features]
default = []

[dependencies]
vibes-core = { path = "../vibes-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
getrandom = "0.3"
tokio = { workspace = true, features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }

opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-stdout = { version = "0.27", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-opentelemetry = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
