[package]
name = "vibes-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin API for vibes - define plugins for Claude Code proxy"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["rt"] }
tokio-util.workspace = true
uuid.workspace = true
vibes-iggy = { path = "../vibes-iggy" }

[dev-dependencies]
tempfile = "3"
