[package]
name = "vibes-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vibes-core = { path = "../vibes-core" }
vibes-groove = { path = "../vibes-groove" }
axum = { version = "0.7", features = ["ws"] }
tokio.workspace = true
tokio-tungstenite = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rust-embed = "8"
mime_guess = "2"
dirs = "6.0.0"
base64 = "0.22"
url = "2"
vibes-plugin-api = { path = "../vibes-plugin-api" }

[dev-dependencies]
axum-test = "16"
