[package]
name = "vibes-groove"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Continual learning storage for vibes"

[lib]
# Build as both a Rust library and a loadable plugin
crate-type = ["rlib", "cdylib"]

[dependencies]
# Storage
cozo = { version = "0.7", default-features = false, features = ["storage-rocksdb", "rayon"] }

# Message streaming (assessment event log)
iggy = "0.6"

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Types
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

# Vector operations (for HNSW embeddings - must match cozo's ndarray version)
ndarray = "0.15"

# Bayesian sampling
rand = "0.8"
rand_distr = "0.4"

# Config paths
dirs.workspace = true

# Logging
tracing.workspace = true

# Security
sha2 = "0.10"
hex = "0.4"
regex = "1"

# Plugin API
vibes-plugin-api = { path = "../../vibes-plugin-api" }

# Core types (for HookResponse)
vibes-core = { path = "../../vibes-core" }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
